﻿Version 1.2:
	Visual Studio 2017 Support
	Added CTRL+Click to navigation option

Version 1.1:
	Fixed ArgumentOutOfRangeException

Version 1.0:
	Initial Release