@@ -1,6 +1,7 @@
 ﻿Version 1.2:
 	Visual Studio 2017 Support
 	Added CTRL+Click to navigation option
+	Strip unnecessary spaces from tags
 
 Version 1.1:
 	Fixed ArgumentOutOfRangeException
